--- a/guidelines/audio_producers/index.html
+++ b/guidelines/audio_producers/index.html
@@ -15,7 +15,7 @@
     <title>Global ASP Guidelines for Audio Recording</title>
   </head>
   <body>
-    <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording</h1>
+    <h1 id="global-asp-guidelines-for-audio-recording">Global ASP Guidelines for Audio Recording - Producers</h1>
 
     <div id="content">
     <div width="50%">
@@ -28,34 +28,80 @@
     <div width="50%">
     <h2 id="guidelines-for-producers">Guidelines for producers</h2>
     
+    <h3>Technical considerations</h3>
     <ul>
-      <li>Reading at length can be dry and thirsty work – try to provide ample water for readers before and after the recording session</li>
-      <li>Provide the stories to readers in advance of the recording day, to allow them time to read through them and prepare
+      <li>Try to record in a high quality, lossless format. For most purposes, 48 kHz / 24 bit WAV files should be a good choice.</li>
+      <li>If possible, adjust the levels on your recording equipment / software before beginning. Try to avoid recording at too low or too high a volume.</li>
+    </ul>
+    <h3>Preparation</h3>
+    <ul>
+      <li>Reading at length can be dry and thirsty work – try to provide ample water for readers before and after the recording session.</li>
+      <li>Try to avoid and reduce mouth noise / mouth clicks while recording rather than trying to remove these in post production.</li>
+      <ul>
+        <li>This article has a description of the problem of mouth noise and some suggestions for dealing with it: <a href="https://www.gravyforthebrain.com/secrets-preventing-mouth-clicks/">The Secrets of Preventing Mouth Clicks in Voiceover Recordings</a></li>
+        <li>Essentially, the main cause of mouth noise is dehydration, so again, make sure that the reader has enough water and remembers to take sips throughout the recording session.</li>
+      </ul>
+    </ul>
+
+    <h3>Microphone</h3>
+    <ul>
+      <li>Test the microphone in advance, and then again after being adjusted for the reader.</li>
+      <ul>
+        <li>Specifically ask readers to read out loud a short sentence or two containing a variety of <a href="https://www.videomaker.com/article/c4/14106-plosives-and-sibilance">sibilants</a> or <a href="http://transom.org/2016/p-pops-plosives/">plosives</a> (e.g. /s/, /ʃ/, /tʃ/, /p/, /b/, /t/, /d/, /k/ etc), such as the following:</li>
         <ul>
-          <li>Ask them to note any words they are unsure of (pronunciation, names, etc), as well as errors in the text, so that they can be addressed and corrected before recording</li>
+          <li>“She sells sea-shells on the sea-shore…”</li>
+          <li>“Peter Piper picked a peck of pickled peppers…”</li>
         </ul>
-      </li>
-      <li>Prepare a text file, PDF, or printout containing the text of all stories in sequence
-        <ul>
-          <li>If you are providing an electronic version of the script for the recording session, it might also be a good idea to prepare a mouse with a middle scroll button, or a trackpad or other device that can be scrolled silently during the recording with breaking flow or losing position</li>
-        </ul>
-      </li>
-      <li>Test the microphone in advance, and then again after being adjusted for the reader
-        <ul>
-          <li>Specifically ask readers to read out loud a short sentence or two containing a variety of <a href="https://www.videomaker.com/article/c4/14106-plosives-and-sibilance">sibilants</a> or <a href="http://transom.org/2016/p-pops-plosives/">plosives</a> (e.g. /s/, /ʃ/, /tʃ/, /p/, /b/, /t/, /d/, /k/ etc), such as the following:
-            <ul>
-              <li>“She sells sea-shells on the sea-shore…”</li>
-              <li>“Peter Piper picked a peck of pickled peppers…”</li>
-            </ul>
-          </li>
-          <li>If this produces unwanted hissing or popping noises on playback, then adjust the microphone placement or experiment with one of the many ways of making a <a href="http://www.wikihow.com/Make-a-Pop-Filter">DIY pop filter</a> to reduce the noise</li>
-        </ul>
-      </li>
-      <li>Try to eliminate sources of ambient noise (fans, vents, machinery etc) or find a quiet location or studio space to record if possible
-        <ul>
-          <li>Be particularly aware of traffic noise which may occur at irregular intervals and be heard through windows etc even if they are closed.</li>
-        </ul>
-      </li>
+        <li>If this produces unwanted hissing or popping noises on playback, then adjust the microphone placement or experiment with one of the many ways of making a <a href="http://www.wikihow.com/Make-a-Pop-Filter">DIY pop filter</a> to reduce the noise</li>
+      </ul>
+      <li>The appropriate microphone height will depend on the height of the reader, whether they are sitting or standing, the position of the audio script (it should be comfortably visible without needing to strain to see it or turn pages)</li>
+      <li>Make sure to position the microphone and any other recording equipment (such as a stand / lectern / table for the script, or chairs for the reader and/or producer/engineer) so that they are stable and unlikely to move during recording</li>
+      <li>Make sure that the equipment (microphone, lectern, chair) is attached in such a way that the reader can sit or stand comfortably for the duration of the recording session, and that small movements on their part will not knock any of the aforementioned equipment or otherwise create unwanted noise.</li>
+    </ul>
+
+    <h3>Audio script</h3>
+    <ul>
+      <li>Provide the audio script to readers in advance of the recording day, to allow them time to read through it and prepare.</li>
+    <ul>
+      <li>Ask them to note any words they are unsure of (pronunciation, proper names, etc), as well as errors in the text, so that they can be addressed and corrected before recording.</li>
+    </ul>
+      <li>Prepare a text file, PDF, or printout containing all text that you plan to record, in sequence.</li>
+      <ul>
+        <li>If you are providing an electronic version of the script for the recording session, it might also be a good idea to prepare a mouse with a middle scroll button, or a trackpad or other device that can be scrolled silently during the recording with breaking flow or losing position.</li>
+      </ul>
+      <li>Make sure to prepare a script (digital or paper) with attention to page breaks. Try to avoid page breaks in the middle of a paragraph where the reader would have to break their flow (or worse, turn a physical page) before finishing the sentence</li>
+    </ul>
+
+    <h3>Field recording</h3>
+    <p>Sometimes, it may be necessary to record out of studio in less than ideal conditions. Keep the following suggestions in mind:</p>
+    <ul>
+      <li>If you don’t have access to a recording studio, try to select a quiet, insulated area for recording where you will not be disturbed.</li>
+      <li>Ideally, avoid recording near windows or other sources of noise. Be careful of unanticipated sources of background noise, such as cars and other street noise, or fans and ventilation systems.</li>
+      <li>Do a test recording using the equipment you will be recording with and listen closely to the results to identify any potential issues in the following areas:</li>
+      <ul>
+        <li>Equipment (e.g., faulty microphone, lack of pop filter, fan or hard disk noise if recording on a laptop, microphone quality)</li>
+        <li>Ambient noise (are there persistent sounds in the background?)</li>
+        <li>Reader (issues with pronunciation, loudness / audio levels, position in relation to the microphone)</li>
+      </ul>
+    </ul>
+
+    <h3>Ambient noise</h3>
+    <p>It is quite common for a microphone to pick up a significant amount of background noise that is imperceptible (or subconsciously ignored) under normal circumstances.</p>
+    <ul>
+      <li>Even loud, persistent humming or other noises produced by nearby equipment (such as ventilation systems, airports, passing trains and underground subways) can be unconsciously blocked out and therefore not noticed prior to recording.</li>
+      <li>It is important to minimize these as much as possible, since they will produce a noisy recording that will be extremely difficult to clean up.</li>
+      <li>Try to eliminate sources of ambient noise (fans, vents, machinery etc) or find a quiet location or studio space to record if possible.</li>
+    <ul>
+      <li>Be particularly aware of traffic noise which may occur at irregular intervals and be heard through windows etc even if they are closed.</li>
+    </ul>
+      <li>Avoid locations with running water, large numbers of people, crowd noises etc.</li>
+    </ul>
+    <p>If it is <em>not</em> possible to avoid ambient noise in the location you are recording, it may be possible to mitigate by adjusting the loudness/levels of the reader. In short, if the audio you want to record is significantly louder than the background noise, it may be easier to remove that noise using a noise removal filter during post processing.</p>
+    <ul>
+      <li>If possible, select a reader with a strong, loud voice.</li>
+      <li>Make sure that the reader is positioned directly in front of the microphone.</li>
+      <li>Make sure you use a pop filter to avoid popping sounds during speech.</li>
+      <li>Ask the reader to make an effort to speak up.</li>
     </ul>
     </div>
     </div>
