--- a/guidelines/audio_readers/index.html
+++ b/guidelines/audio_readers/index.html
@@ -28,17 +28,77 @@
     <div width="50%">
     <h2 id="guidelines-for-readers">Guidelines for readers</h2>
     
+    <h3>Preparation</h3>
+    <p>Before you record, keep the following things in mind as you prepare:</p>
     <ul>
-      <li>Don’t rush – read in a normal voice, at moderate speed</li>
-      <li>Don’t try to dramatize or “act out” the story by reading in an exaggerated voice</li>
-      <li>Leave a slight pause between pages (1 or 2 seconds max.)</li>
-      <li>Leave a longer pause between stories (3 or 4 seconds max.)</li>
-      <li>Keep pronunciation natural, but as accurate as possible</li>
-      <li>If there is any unfamiliar vocabulary in the text, try to practice it in advance</li>
-      <li>Don’t position the microphone directly in front of your mouth</li>
-      <li>If you find you are running out of breath, slow down (or take a brief pause from reading); you are probably rushing too quickly through the stories</li>
-      <li>If you make a mistake, <strong>don’t panic</strong>: pause for a second or two and repeat the entire sentence again (the error will be removed in post-processing)</li>
+      <li>Don’t rush – read in a normal voice, at moderate speed.</li>
+      <ul>
+        <li>Try to read at an even, natural pace – don’t read too quickly or too slowly</li>
+        <li>If you find you are running out of breath, <em>slow down</em> (or take a brief pause from reading); you are probably rushing too quickly through the script.</li>
+      </ul>
+      <li>Keep pronunciation natural, but as accurate as possible.</li>
+      <li>Don’t try to dramatize or “act out” the story by reading in an exaggerated voice (unless this is required).</li>
+      <li>Be aware of “mouth noise” – small clicks and popping sounds produced when you move your mouth, but before sounds come out.</li>
+      <ul>
+        <li>These are usually caused by dehydration and can be very difficult (and often impossible) to remove in post processing.</li>
+        <li>Sometimes it can help to drink water if mouth noise is becoming excessive.</li>
+        <li>Ideally you should become aware of what mouth noise sounds like and train yourself to avoid it if possible.</li>
+      </ul>
+      <li>Make sure to give yourself sufficient time in advance to read through the whole script at least once and prepare for reading it before the actual recording session. Avoid reading &quot;cold&quot;, i.e. without preparation.</li>
+      <ul>
+        <li>If there is any unfamiliar vocabulary in the text, try to practice it in advance.</li>
+        <li>Make a note during your preparation of any unfamiliar words, proper nouns (e.g. names of people and places), and technical terms with specific pronunciations. Look up these words in advance or ask someone in a relevant field to confirm the appropriate pronunciation.</li>
+        <li>Find out from the producer whether a specific standard is expected for pronunciation during recording. Be aware of any pronunciations that differ from the way that you normally speak.</li>
+      </ul>
     </ul>
+
+    <h3>Setup</h3>
+    <p>Below are some suggestions for setting up the recording session:</p>
+    <ul>
+      <li>Make sure that the microphone is adjusted properly and that you are able to sit or stand comfortably.</li>
+      <li>Don’t position the microphone directly in front of your mouth.</li>
+      <li>Leave a slight pause between pages or sections of the script (1 or 2 seconds max.).</li>
+      <li>Leave a longer pause between stories (3 or 4 seconds max.).</li>
+    </ul>
+
+    <h3>Reading</h3>
+    <ul>
+      <li>Make sure to pause at all commas, periods, semicolons etc. Don’t rush through sentences in an attempt to finish more quickly.</li>
+      <li>Take time to drink water if you feel thirsty or mouth dry. It’s a good practice to take a sip of water at least every ten minutes or so.</li>
+      <li>Use vocal markers to identify the endpoints of sections of the script (this will make it easier to process later):</li>
+      <ul>
+        <li>At the end of each section, say &quot;end of section&quot;.</li>
+        <li>If you are reading a story, say &quot;end of story&quot;.</li>
+        <li>If you have finished reading the script, say &quot;end of script&quot;.</li>
+      </ul>
+      <li>If you are turning pages, <em>wait until they have settled completely</em> before continuing to record.</li>
+      <li>Between sections, pause for a second or two so that tracks can be split cleanly.</li>
+      <li>Don’t worry too much about the length of pauses between sections (or sentences). so long as there is some silence between them, that silence can be adjusted in post. Just make sure that it is not too short (i.e., that there is no silence at all between sections).</li>
+    </ul>
+
+    <h3>Mistakes</h3>
+    <ul>
+      <li>If you make a mistake while reading (e.g., skip a word, mispronounce something, stumble over a phrase etc.), <strong>don’t panic</strong>:</li>
+      <ol>
+        <li>Pause for a second or two;</li>
+        <li>Say the word “pickup” clearly and distinctly into the microphone;</li>
+        <li>Repeat sentence you were reading from the beginning.</li>
+      </ol>
+      <li>Notes:</li>
+      <ul>
+        <li>The error will be removed in post-processing.</li>
+        <li>There is no need to repeat the whole page or paragraph – usually just the entire sentence (from the last full stop) is sufficient.</li>
+        <li>Make sure you leave enough of a pause between when you say “pickup” and when you begin recording again.</li>
+        <li>You can say “pickup” as many times as you need until you get the sentence right.</li>
+        <li><strong>Don’t</strong> rush to repeat a mistake or stuttered word in order to “save time” as this can result in a sentence that is at a different speed than the rest of the recording, which may mean you will need to return to the studio at a later date to re-record the segment.</li>
+      </ul>
+      <li>If you are reading from a paper script, try to avoid making any rustling or shuffling noises as you turn the pages.</li>
+      <ul>
+        <li>Make sure that you don’t continue to read aloud until the sound of the pages turning has ceased <em>completely</em>.</li>
+      </ul>
+      <li>If you are reading from a screen, make sure to avoid mouse or keyboard clicking noises during recording/</li>
+    </ul>
+
     </div>
     </div>
 
