--- a/stories/nb/0066_nozibele-og-de-tre-hårstråene.html
+++ b/stories/nb/0066_nozibele-og-de-tre-hårstråene.html
@@ -77,7 +77,7 @@ Tessa Welch<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
 
-<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skynde seg hjem. Men hun gikk seg vill i mørket.</p>
+<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skyndte seg hjem. Men hun gikk seg vill i mørket.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Tessa Welch<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden: “Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent tingene mine før jeg kommer tilbake.”</p>
+<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden: “Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent før jeg kommer tilbake.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
