--- a/stories/nb/0201_eselbarnet.html
+++ b/stories/nb/0201_eselbarnet.html
@@ -84,7 +84,7 @@ Lindiwe Matshikiza<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>Alle sammen begynte å krangle. “Vi sa vi skulle beskytte mor og barn, og det skal vi gjøre”, sa noen. Men de kommer til å bringe ulykke!” sa andre.</p>
+<p>Alle sammen begynte å krangle. “Vi sa vi skulle beskytte mor og barn, og det skal vi gjøre”, sa noen. “Men de kommer til å bringe ulykke!” sa andre.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -175,7 +175,7 @@ Lindiwe Matshikiza<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
 
-<p>Esel fant moren sin som var alene, og sørget tapet av barnet sitt. De stirret på hverandre lenge. Og så klemte de hverandre veldig hardt.</p>
+<p>Esel fant moren sin som var alene, og sørget over tapet av barnet sitt. De stirret på hverandre lenge. Og så klemte de hverandre veldig hardt.</p>
 
 <div class="pagenum">19</div>
 <p></div><div class="pagebreak"></p>
