--- a/stories/nb/0262_magozwe_slides.html
+++ b/stories/nb/0262_magozwe_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
-<p>I den travle byen Nairobi, langt fra det omsorgsfulle livet hjemme, bodde det en gjeng hjemløse gutter. De tok hver dag akkurat som den kom. En morgen pakket guttene sammen mattene sine etter at de hadde sovet på det kalde fortauet. For å fordrive kulden lagde de et bål av søppel. En av guttene i gjengen var Magozwe. Han var den yngste.</p>
+<p>I den travle byen Nairobi, langt fra det trygge livet hjemme, bodde det en gjeng hjemløse gutter. De tok hver dag akkurat som den kom. En morgen pakket guttene sammen mattene sine etter at de hadde sovet på det kalde fortauet. For å fordrive kulden lagde de et bål av søppel. En av guttene i gjengen var Magozwe. Han var den yngste.</p>
 <center>
 <strong>1</strong>
 </center>
