--- a/stories/nn/0002_sjå-på-dyra_slides.html
+++ b/stories/nn/0002_sjå-på-dyra_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="sjå-på-dyra-1">Sjå på dyra</h2>
-<strong>Tekst:</strong> Jenny Katz<br> <strong>Illustrasjonar:</strong> Sandy Campbell<br> <strong>Omsetjing:</strong> Espen Stranger<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Jenny Katz<br> <strong>Illustrasjonar:</strong> Sandy Campbell<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
