--- a/stories/nn/0052_simbegwire_slides.html
+++ b/stories/nn/0052_simbegwire_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>Då Simbegwire si mor døydde, vart ho veldig lei seg. Simbegwire sin far gjorde sitt beste for å ta hand om dotter si. Litt etter litt lærte dei å verta lukkelege igjen, utan Simbegwire si mor. Kvar morgon sat dei og snakka om dagen som låg føre dei. Kvar kveld laga dei middag saman. Etter at dei hadde teke oppvasken, hjelpte Simbegwire sin far ho med leksene.</p>
+<p>Då Simbegwire si mor døydde, vart ho veldig lei seg. Simbegwire sin far gjorde sitt beste for å ta hand om dotter si. Litt etter litt vart dei lukkelege igjen, utan Simbegwire si mor. Kvar morgon sat dei og snakka om dagen som låg føre dei. Kvar kveld laga dei middag saman. Etter at dei hadde teke oppvasken, hjelpte Simbegwire sin far ho med leksene.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>Ein dag kom Simbegwire sin far heim seinare enn vanleg. &quot;Kor er du, jenta mi?&quot; ropte han. Simbegwire sprang til faren sin. Ho stoppa opp då ho såg at han heldt ei dame i handa. &quot;Eg vil at du skal møta ei spesiell kvinne, jenta mi.&quot; Dette er Anita&quot;, sa han og smilte.</p>
+<p>Ein dag kom Simbegwire sin far heim seinare enn vanleg. &quot;Kor er du, jenta mi?&quot; ropte han. Simbegwire sprang til faren sin. Ho stoppa opp då ho såg at han heldt ei dame i handa. &quot;Eg vil at du skal møta ei spesiell kvinne, jenta mi. Dette er Anita&quot;, sa han og smilte.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Då Simbegwire sin far kom heim, såg han at rommet hennar var tomt. &quot;Kva har skjett, Anita?&quot; spurde han bekymra. Kvinna svara at Simbegwire hadde stukke av. &quot;Eg ville at ho skulle respektera meg&quot;, sa ho. Men kanskje eg var for streng.&quot; Simbegwire sin far forlét huset og gjekk i retning av bekken. Han heldt fram til landsbyen til systera si for å finna ut om ho hadde sett Simbegwire.</p>
+<p>Då Simbegwire sin far kom heim, såg han at rommet hennar var tomt. &quot;Kva har skjett, Anita?&quot; spurde han bekymra. Kvinna svara at Simbegwire hadde stukke av. &quot;Eg ville at ho skulle respektera meg&quot;, sa ho. &quot;Men kanskje eg var for streng.&quot; Simbegwire sin far forlét huset og gjekk i retning av bekken. Han heldt fram til landsbyen til systera si for å finna ut om ho hadde sett Simbegwire.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <h2 id="simbegwire-1">Simbegwire</h2>
-<strong>Tekst:</strong> Rukia Nantale<br> <strong>Illustrasjonar:</strong> Benjamin Mitchley<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Rukia Nantale<br> <strong>Illustrasjonar:</strong> Benjamin Mitchley<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
