--- a/stories/nn/0066_nozibele-og-dei-tre-hårstråa_slides.html
+++ b/stories/nn/0066_nozibele-og-dei-tre-hårstråa_slides.html
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Kvar dag måtte ho laga mat og feia og gjera reint for hunden. Så ein dag sa hunden: &quot;Nozibele, i dag må eg vitja nokre vener. Fei huset, lag mat og gjer reint tinga mine før eg kjem tilbake.&quot;</p>
+<p>Kvar dag måtte ho laga mat og feia og gjera reint for hunden. Så ein dag sa hunden: &quot;Nozibele, i dag må eg vitja nokre vener. Fei huset, lag mat og gjer reint før eg kjem tilbake.&quot;</p>
 <center>
 <strong>10</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <h2 id="nozibele-og-dei-tre-hårstråa-1">Nozibele og dei tre hårstråa</h2>
-<strong>Tekst:</strong> Tessa Welch<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Tessa Welch<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
