--- a/stories/nn/0072_honningguidens-hemn.html
+++ b/stories/nn/0072_honningguidens-hemn.html
@@ -91,7 +91,7 @@ Zulu folktale<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>Men Gingile sløkte bålet, plukka opp spydet, byrja å gå heim og oversåg fuglen. Ngede ropte sint: “Vik-tor, vik-tor!” Gingile stoppa og stira på den vesle fuglen og lo høgt. “Du vil ha litt honning, du, vesle ven? Ha! Men eg gjorde alt arbeidet og fekk alle stikka. Kvifor skulle eg dela noko av denne herlege honningen med deg?” Ngede var rasande! Dette var då ingen måte å behandla han på! Men han skulle få hemnen sin.</p>
+<p>Men Gingile sløkte bålet, plukka opp spydet, byrja å gå heim og oversåg fuglen. Ngede ropte sint: “SI-ger, SI-ger!” Gingile stoppa og stira på den vesle fuglen og lo høgt. “Du vil ha litt honning, du, vesle ven? Ha! Men eg gjorde alt arbeidet og fekk alle stikka. Kvifor skulle eg dela noko av denne herlege honningen med deg?” Ngede var rasande! Dette var då ingen måte å behandla han på! Men han skulle få hemnen sin.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,12 +119,12 @@ Zulu folktale<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
 
-<p>Og på den måten, når borna til Gingile høyrde forteljinga om Ngede, respekterte dei den vesle fuglen. Kvar gong dei sanka honning sørgde dei for å gje den største delen av vokskaka til honningguiden!</p>
+<p>Og på den måten, når borna til Gingile høyrer forteljinga om Ngede, respekterer dei den vesle fuglen. Kvar gong dei sankar honning sørger dei for å gje den største delen av vokskaka til honningguiden!</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Zulu folktale<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Zulu folktale<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
