--- a/stories/nn/0072_honningguidens-hemn_slides.html
+++ b/stories/nn/0072_honningguidens-hemn_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
-<p>Men Gingile sløkte bålet, plukka opp spydet, byrja å gå heim og oversåg fuglen. Ngede ropte sint: &quot;Vik-tor, vik-tor!&quot; Gingile stoppa og stira på den vesle fuglen og lo høgt. &quot;Du vil ha litt honning, du, vesle ven? Ha! Men eg gjorde alt arbeidet og fekk alle stikka. Kvifor skulle eg dela noko av denne herlege honningen med deg?&quot; Ngede var rasande! Dette var då ingen måte å behandla han på! Men han skulle få hemnen sin.</p>
+<p>Men Gingile sløkte bålet, plukka opp spydet, byrja å gå heim og oversåg fuglen. Ngede ropte sint: &quot;SI-ger, SI-ger!&quot; Gingile stoppa og stira på den vesle fuglen og lo høgt. &quot;Du vil ha litt honning, du, vesle ven? Ha! Men eg gjorde alt arbeidet og fekk alle stikka. Kvifor skulle eg dela noko av denne herlege honningen med deg?&quot; Ngede var rasande! Dette var då ingen måte å behandla han på! Men han skulle få hemnen sin.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
-<p>Og på den måten, når borna til Gingile høyrde forteljinga om Ngede, respekterte dei den vesle fuglen. Kvar gong dei sanka honning sørgde dei for å gje den største delen av vokskaka til honningguiden!</p>
+<p>Og på den måten, når borna til Gingile høyrer forteljinga om Ngede, respekterer dei den vesle fuglen. Kvar gong dei sankar honning sørger dei for å gje den største delen av vokskaka til honningguiden!</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="honningguidens-hemn-1">Honningguidens hemn</h2>
-<strong>Tekst:</strong> Zulu folktale<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Zulu folktale<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
