--- a/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai.html
+++ b/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai.html
@@ -84,7 +84,7 @@ Nicola Rijsdijk<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
 
-<p>Wangari lærde mykje nytt på det amerikanske universitetet. Ho studerte planter og korleis dei veks. Og hugsa korleis ho hadde vakse sjølv: i leiker og spel med brørne sine i Kenyas vene skogar.</p>
+<p>Wangari lærde mykje nytt på det amerikanske universitetet. Ho studerte planter og korleis dei veks. Og hugsa korleis ho hadde vakse opp sjølv: i leiker og spel med brørne sine i Kenyas vene skogar.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -131,7 +131,7 @@ Nicola Rijsdijk<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Nicola Rijsdijk<br /><strong>Illustrasjonar:</strong> Maya Marshak<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Nicola Rijsdijk<br /><strong>Illustrasjonar:</strong> Maya Marshak<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
