--- a/stories/nn/0112_kroppen-min_slides.html
+++ b/stories/nn/0112_kroppen-min_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
-<p>Eg kan hoppa med han.</p>
+<p>Eg kan hoppa tau med han.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="kroppen-min-1">Kroppen min</h2>
-<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjonar:</strong> Mlungisi Dlamini<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjonar:</strong> Mlungisi Dlamini<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
