--- a/stories/nn/0201_eselbarnet.html
+++ b/stories/nn/0201_eselbarnet.html
@@ -84,7 +84,7 @@ Lindiwe Matshikiza<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>Alle saman byrja å krangla. “Vi sa vi skulle verna mor og barn, og det skal vi gjera”, sa nokon. Men dei kjem til å bringa ulukke!” sa andre.</p>
+<p>Alle saman byrja å krangla. “Vi sa vi skulle verna mor og barn, og det skal vi gjera”, sa nokon. “Men dei kjem til å bringa ulukke!” sa andre.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -175,7 +175,7 @@ Lindiwe Matshikiza<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
 
-<p>Esel fann mora si som var åleine, og sørgde tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
+<p>Esel fann mora si som var åleine, og sørgde over tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
 
 <div class="pagenum">19</div>
 <p></div><div class="pagebreak"></p>
@@ -187,7 +187,7 @@ Lindiwe Matshikiza<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Lindiwe Matshikiza<br /><strong>Illustrasjonar:</strong> Meghan Judge<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Lindiwe Matshikiza<br /><strong>Illustrasjonar:</strong> Meghan Judge<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/donkey-child">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
