--- a/stories/nn/0201_eselbarnet_slides.html
+++ b/stories/nn/0201_eselbarnet_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>Alle saman byrja å krangla. &quot;Vi sa vi skulle verna mor og barn, og det skal vi gjera&quot;, sa nokon. Men dei kjem til å bringa ulukke!&quot; sa andre.</p>
+<p>Alle saman byrja å krangla. &quot;Vi sa vi skulle verna mor og barn, og det skal vi gjera&quot;, sa nokon. &quot;Men dei kjem til å bringa ulukke!&quot; sa andre.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
-<p>Esel fann mora si som var åleine, og sørgde tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
+<p>Esel fann mora si som var åleine, og sørgde over tapet av barnet sitt. Dei stira på kvarandre lengje. Og så klemde dei kvarandre veldig hardt.</p>
 <center>
 <strong>19</strong>
 </center>
@@ -277,7 +277,7 @@
 <section class="slide level1">
 
 <h2 id="eselbarnet-1">Eselbarnet</h2>
-<strong>Tekst:</strong> Lindiwe Matshikiza<br> <strong>Illustrasjonar:</strong> Meghan Judge<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Lindiwe Matshikiza<br> <strong>Illustrasjonar:</strong> Meghan Judge<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
