--- a/stories/nn/0243_på-ferie-hos-bestemor.html
+++ b/stories/nn/0243_på-ferie-hos-bestemor.html
@@ -187,7 +187,7 @@ Violet Otieno<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Violet Otieno<br /><strong>Illustrasjonar:</strong> Catherine Groenewald<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Violet Otieno<br /><strong>Illustrasjonar:</strong> Catherine Groenewald<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/holidays-grandmother">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
