--- a/stories/nn/0243_på-ferie-hos-bestemor_slides.html
+++ b/stories/nn/0243_på-ferie-hos-bestemor_slides.html
@@ -277,7 +277,7 @@
 <section class="slide level1">
 
 <h2 id="på-ferie-hos-bestemor-1">På ferie hos bestemor</h2>
-<strong>Tekst:</strong> Violet Otieno<br> <strong>Illustrasjonar:</strong> Catherine Groenewald<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Violet Otieno<br> <strong>Illustrasjonar:</strong> Catherine Groenewald<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
