--- a/stories/nn/0262_magozwe.html
+++ b/stories/nn/0262_magozwe.html
@@ -49,7 +49,7 @@ Lesley Koyi<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>I den travle byen Nairobi, langt frå det omsorgsfulle livet heime, budde det ein gjeng heimlause gutar. Dei tok kvar dag akkurat som han kom. Ein morgon pakka gutane saman mattene sine etter at dei hadde sove på det kalde fortauet. For å fordriva kulda laga dei eit bål av søppel. Ein av gutane i gjengen var Magozwe. Han var den yngste.</p>
+<p>I den travle byen Nairobi, langt frå det trygge livet heime, budde det ein gjeng heimlause gutar. Dei tok kvar dag akkurat som han kom. Ein morgon pakka gutane saman mattene sine etter at dei hadde sove på det kalde fortauet. For å fordriva kulda laga dei eit bål av søppel. Ein av gutane i gjengen var Magozwe. Han var den yngste.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -159,7 +159,7 @@ Lesley Koyi<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Lesley Koyi<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Lesley Koyi<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/magozwe-0">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
