--- a/stories/nn/0262_magozwe_slides.html
+++ b/stories/nn/0262_magozwe_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
-<p>I den travle byen Nairobi, langt frå det omsorgsfulle livet heime, budde det ein gjeng heimlause gutar. Dei tok kvar dag akkurat som han kom. Ein morgon pakka gutane saman mattene sine etter at dei hadde sove på det kalde fortauet. For å fordriva kulda laga dei eit bål av søppel. Ein av gutane i gjengen var Magozwe. Han var den yngste.</p>
+<p>I den travle byen Nairobi, langt frå det trygge livet heime, budde det ein gjeng heimlause gutar. Dei tok kvar dag akkurat som han kom. Ein morgon pakka gutane saman mattene sine etter at dei hadde sove på det kalde fortauet. For å fordriva kulda laga dei eit bål av søppel. Ein av gutane i gjengen var Magozwe. Han var den yngste.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <h2 id="magozwe-1">Magozwe</h2>
-<strong>Tekst:</strong> Lesley Koyi<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Lesley Koyi<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
