--- a/stories/nn/0296_bananseljaren-tom.html
+++ b/stories/nn/0296_bananseljaren-tom.html
@@ -131,7 +131,7 @@ Humphreys Odunga<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Humphreys Odunga<br /><strong>Illustrasjonar:</strong> Zablon Alex Nguku<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Humphreys Odunga<br /><strong>Illustrasjonar:</strong> Zablon Alex Nguku<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/tom-banana-seller">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
