--- a/stories/nb/0052_simbegwire_slides.html
+++ b/stories/nb/0052_simbegwire_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>Da Simbegwires mor døde, ble hun veldig lei seg. Simbegwires far gjorde sitt beste for å ta hånd om datteren sin. Litt etter litt lærte de å bli lykkelige igjen, uten Simbegwires mor. Hver morgen satt de og snakket om dagen som lå foran dem. Hver kveld lagde de middag sammen. Etter at de hadde tatt oppvasken, hjalp Simbegwires far henne med leksene.</p>
+<p>Da Simbegwires mor døde, ble hun veldig lei seg. Simbegwires far gjorde sitt beste for å ta hånd om datteren sin. Litt etter litt ble de lykkelige igjen, uten Simbegwires mor. Hver morgen satt de og snakket om dagen som lå foran dem. Hver kveld lagde de middag sammen. Etter at de hadde tatt oppvasken, hjalp Simbegwires far henne med leksene.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>En dag kom Simbegwires far hjem senere enn vanlig. &quot;Hvor er du, jenta mi?&quot; ropte han. Simbegwire løp til faren sin. Hun stoppet opp da hun så at han holdt en dame i hånden. &quot;Jeg vil at du skal møte en spesiell kvinne, jenta mi.&quot; Dette er Anita&quot;, sa han og smilte.</p>
+<p>En dag kom Simbegwires far hjem senere enn vanlig. &quot;Hvor er du, jenta mi?&quot; ropte han. Simbegwire løp til faren sin. Hun stoppet opp da hun så at han holdt en dame i hånden. &quot;Jeg vil at du skal møte en spesiell kvinne, jenta mi. Dette er Anita&quot;, sa han og smilte.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Da Simbegwires far kom hjem, så han at rommet hennes tomt. &quot;Hva har skjedd, Anita?&quot; spurte han bekymret. Kvinnen svarte at Simbegwire hadde stukket av. &quot;Jeg ville at hun skulle respektere meg&quot;, sa hun. Men kanskje jeg var for streng.&quot; Simbegwires far forlot huset og gikk i retning av bekken. Han fortsatte til landsbyen til søsteren sin for å finne ut om hun hadde sett Simbegwire.</p>
+<p>Da Simbegwires far kom hjem, så han at rommet hennes var tomt. &quot;Hva har skjedd, Anita?&quot; spurte han bekymret. Kvinnen svarte at Simbegwire hadde stukket av. &quot;Jeg ville at hun skulle respektere meg&quot;, sa hun. &quot;Men kanskje jeg var for streng.&quot; Simbegwires far forlot huset og gikk i retning av bekken. Han fortsatte til landsbyen til søsteren sin for å finne ut om hun hadde sett Simbegwire.</p>
 <center>
 <strong>13</strong>
 </center>
