--- a/stories/nb/0066_nozibele-og-de-tre-hårstråene_slides.html
+++ b/stories/nb/0066_nozibele-og-de-tre-hårstråene_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skynde seg hjem. Men hun gikk seg vill i mørket.</p>
+<p>Så Nozibele gikk tilbake til elven alene. Hun fant halsbåndet og skyndte seg hjem. Men hun gikk seg vill i mørket.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden: &quot;Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent tingene mine før jeg kommer tilbake.&quot;</p>
+<p>Hver dag måtte hun lage mat og feie og gjøre rent for hunden. Så en dag sa hunden: &quot;Nozibele, i dag må jeg besøke noen venner. Fei huset, lag mat og gjør rent før jeg kommer tilbake.&quot;</p>
 <center>
 <strong>10</strong>
 </center>
