--- a/stories/nb/0072_honningguidens-hevn.html
+++ b/stories/nb/0072_honningguidens-hevn.html
@@ -77,7 +77,7 @@ Zulu folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
 
-<p>Da biene var ute, dyttet Gingile hånden sin inn i bolet. Han tok ut håndfuller med tunge vokskaker som dyppet av deilig honning og var fulle av feite, hvite larver. Han la vokskakene forsiktig i veska han bar på skulderen og begynte å klatre ned fra treet.</p>
+<p>Da biene var ute, dyttet Gingile hånden sin inn i bolet. Han tok ut håndfuller med tunge vokskaker som dryppet av deilig honning og var fulle av feite, hvite larver. Han la vokskakene forsiktig i veska han bar på skulderen og begynte å klatre ned fra treet.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Zulu folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>Men Gingile slukket bålet, plukket opp spydet, begynte å gå hjem og overså fuglen. Ngede ropte sint: “Vik-tor, vik-tor!” Gingile stoppet og stirret på den lille fuglen og lo høyt. “Du vil ha litt honning, du, lille venn? Ha! Men jeg gjorde alt arbeidet og fikk alle stikkene. Hvorfor skulle jeg dele noe av denne deilige honningen med deg?” Ngede var rasende! Dette var da ingen måte å behandle ham på! Men han skulle få sin hevn.</p>
+<p>Men Gingile slukket bålet, plukket opp spydet, begynte å gå hjem og overså fuglen. Ngede ropte sint: “SEI-er, SEI-er!” Gingile stoppet og stirret på den lille fuglen og lo høyt. “Du vil ha litt honning, du, lille venn? Ha! Men jeg gjorde alt arbeidet og fikk alle stikkene. Hvorfor skulle jeg dele noe av denne deilige honningen med deg?” Ngede var rasende! Dette var da ingen måte å behandle ham på! Men han skulle få sin hevn.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Zulu folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
 
-<p>Og på den måten, når barna til Gingile hørte fortellingen om Ngede, respekterte de den lille fuglen. Hver gang de sanket honning sørget de for å gi den største delen av vokskaka til honningguiden!</p>
+<p>Og på den måten, når barna til Gingile hører fortellingen om Ngede, respekterer de den lille fuglen. Hver gang de sanker honning sørger de for å gi den største delen av vokskaka til honningguiden!</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
