--- a/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai.html
+++ b/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai.html
@@ -84,7 +84,7 @@ Nicola Rijsdijk<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
 
-<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
+<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst opp selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
