--- a/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
+++ b/stories/nb/0110_et-lite-frø-historien-om-wangari-maathai_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
+<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst opp selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
 <center>
 <strong>6</strong>
 </center>
