--- a/stories/nb/0112_kroppen-min.html
+++ b/stories/nb/0112_kroppen-min.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div><div class="pageb
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
 
-<p>Jeg kan hoppe med den.</p>
+<p>Jeg kan hoppe tau med den.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
