--- a/stories/nb/0201_eselbarnet_slides.html
+++ b/stories/nb/0201_eselbarnet_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>Alle sammen begynte å krangle. &quot;Vi sa vi skulle beskytte mor og barn, og det skal vi gjøre&quot;, sa noen. Men de kommer til å bringe ulykke!&quot; sa andre.</p>
+<p>Alle sammen begynte å krangle. &quot;Vi sa vi skulle beskytte mor og barn, og det skal vi gjøre&quot;, sa noen. &quot;Men de kommer til å bringe ulykke!&quot; sa andre.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
-<p>Esel fant moren sin som var alene, og sørget tapet av barnet sitt. De stirret på hverandre lenge. Og så klemte de hverandre veldig hardt.</p>
+<p>Esel fant moren sin som var alene, og sørget over tapet av barnet sitt. De stirret på hverandre lenge. Og så klemte de hverandre veldig hardt.</p>
 <center>
 <strong>19</strong>
 </center>
