--- a/stories/nn/0004_geit-hund-og-ku.html
+++ b/stories/nn/0004_geit-hund-og-ku.html
@@ -103,7 +103,7 @@ Fabian Wakholi<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Fabian Wakholi<br /><strong>Illustrasjonar:</strong> Marleen Visser<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Fabian Wakholi<br /><strong>Illustrasjonar:</strong> Marleen Visser<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/goat-dog-and-cow">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
