--- a/stories/nn/0004_geit-hund-og-ku_slides.html
+++ b/stories/nn/0004_geit-hund-og-ku_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="geit-hund-og-ku-1">Geit, Hund og Ku</h2>
-<strong>Tekst:</strong> Fabian Wakholi<br> <strong>Illustrasjonar:</strong> Marleen Visser<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Fabian Wakholi<br> <strong>Illustrasjonar:</strong> Marleen Visser<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
