--- a/stories/nn/0006_anansi-og-visdomen_slides.html
+++ b/stories/nn/0006_anansi-og-visdomen_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <h2 id="anansi-og-visdomen-1">Anansi og visdomen</h2>
-<strong>Tekst:</strong> Ghanaian folktale<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Ghanaian folktale<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
