--- a/stories/nn/0027_avgjerd_slides.html
+++ b/stories/nn/0027_avgjerd_slides.html
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <h2 id="avgjerd-1">Avgjerd</h2>
-<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjonar:</strong> Vusi Malindi<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjonar:</strong> Vusi Malindi<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
