--- a/stories/nn/0030_kjensler.html
+++ b/stories/nn/0030_kjensler.html
@@ -82,7 +82,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>nynorsk</div><div class="pag
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrasjonar:</strong> Kathy Arbuckle<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>Illustrasjonar:</strong> Kathy Arbuckle<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/feelings">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
