--- a/stories/nn/0066_nozibele-og-dei-tre-hårstråa.html
+++ b/stories/nn/0066_nozibele-og-dei-tre-hårstråa.html
@@ -112,7 +112,7 @@ Tessa Welch<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>Kvar dag måtte ho laga mat og feia og gjera reint for hunden. Så ein dag sa hunden: “Nozibele, i dag må eg vitja nokre vener. Fei huset, lag mat og gjer reint tinga mine før eg kjem tilbake.”</p>
+<p>Kvar dag måtte ho laga mat og feia og gjera reint for hunden. Så ein dag sa hunden: “Nozibele, i dag må eg vitja nokre vener. Fei huset, lag mat og gjer reint før eg kjem tilbake.”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -138,7 +138,7 @@ Tessa Welch<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Tessa Welch<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Tessa Welch<br /><strong>Illustrasjonar:</strong> Wiehan de Jager<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/nozibele-and-three-hairs">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
