--- a/stories/nn/0089_khalai-snakkar-med-plantene_slides.html
+++ b/stories/nn/0089_khalai-snakkar-med-plantene_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="khalai-snakkar-med-plantene-1">Khalai snakkar med plantene</h2>
-<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjonar:</strong> Jesse Pietersen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Ursula Nafula<br> <strong>Illustrasjonar:</strong> Jesse Pietersen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
