--- a/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai_slides.html
+++ b/stories/nn/0110_eit-lite-frø-historia-om-wangari-maathai_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>Wangari lærde mykje nytt på det amerikanske universitetet. Ho studerte planter og korleis dei veks. Og hugsa korleis ho hadde vakse sjølv: i leiker og spel med brørne sine i Kenyas vene skogar.</p>
+<p>Wangari lærde mykje nytt på det amerikanske universitetet. Ho studerte planter og korleis dei veks. Og hugsa korleis ho hadde vakse opp sjølv: i leiker og spel med brørne sine i Kenyas vene skogar.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="eit-lite-frø-historia-om-wangari-maathai-1">Eit lite frø: Historia om Wangari Maathai</h2>
-<strong>Tekst:</strong> Nicola Rijsdijk<br> <strong>Illustrasjonar:</strong> Maya Marshak<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Nicola Rijsdijk<br> <strong>Illustrasjonar:</strong> Maya Marshak<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
