--- a/stories/nn/0156_den-svoltne-krokodilla_slides.html
+++ b/stories/nn/0156_den-svoltne-krokodilla_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <h2 id="den-svoltne-krokodilla-1">Den svoltne krokodilla</h2>
-<strong>Tekst:</strong> Christian G.<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Christian G.<br> <strong>Illustrasjonar:</strong> Wiehan de Jager<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
