--- a/stories/nn/0210_tingi-og-kyrne.html
+++ b/stories/nn/0210_tingi-og-kyrne.html
@@ -117,7 +117,7 @@ Ingrid Schechter<br>nynorsk</div><div class="pagebreak">
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Ingrid Schechter<br /><strong>Illustrasjonar:</strong> Ingrid Schechter<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Ingrid Schechter<br /><strong>Illustrasjonar:</strong> Ingrid Schechter<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/tingi-and-cows">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
