--- a/stories/nn/0271_to_slides.html
+++ b/stories/nn/0271_to_slides.html
@@ -182,7 +182,7 @@
 <section class="slide level1">
 
 <h2 id="to-1">To</h2>
-<strong>Tekst:</strong> Carole Bloch<br> <strong>Illustrasjonar:</strong> Richard MacIntosh<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Carole Bloch<br> <strong>Illustrasjonar:</strong> Richard MacIntosh<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
