--- a/stories/nn/0302_eld.html
+++ b/stories/nn/0302_eld.html
@@ -103,7 +103,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>nynorsk</div><di
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Tekst:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Illustrasjonar:</strong> Rob Owen<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen<br /><strong>Språk:</strong> nynorsk</p>
+<p><strong>Tekst:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Illustrasjonar:</strong> Rob Owen<br /><strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br /><strong>Språk:</strong> nynorsk</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/fire">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
