--- a/stories/nn/0327_å-telja-dyr_slides.html
+++ b/stories/nn/0327_å-telja-dyr_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="å-telja-dyr-1">Å telja dyr</h2>
-<strong>Tekst:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrasjonar:</strong> Rob Owen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrasjonar:</strong> Rob Owen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
