--- a/stories/nn/0342_straff_slides.html
+++ b/stories/nn/0342_straff_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="straff-1">Straff</h2>
-<strong>Tekst:</strong> Adelheid Marie Bwire<br> <strong>Illustrasjonar:</strong> Melany Pietersen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> nynorsk<br>
+<strong>Tekst:</strong> Adelheid Marie Bwire<br> <strong>Illustrasjonar:</strong> Melany Pietersen<br> <strong>Omsetjing:</strong> Espen Stranger-Johannessen, Martine Rørstad Sand<br> <strong>Språk:</strong> nynorsk<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
